--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,22 @@
 </head>
 
 <body>
+    <nav>
+        <div id="navbar">
+            <ul>
+                <li><a href="home">Home</a></li>
+                <li class="currentPage"><a href="bio">Bio</a></li>
+                <li><a href="portfolio">Portfolio</a></li>
+                <li><a href="resume">Resume</a></li>
+                <li><a href="contact">Contact Me!</a></li>
+            </ul>
+            <button class="hidden">
+                <span class="iconBar"></span>
+                <span class="iconBar"></span>
+                <span class="iconBar"></span>
+            </button>
+        </div>
+    </nav>
     {% block body %}
     {% endblock %}
 </body>
