--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block header %}
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
