--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,13 +11,13 @@
     {% endblock %}
 </head>
 
-<body>
+<body class="bodyPage">
     <nav>
         <div id="navbar">
             <ul>
                 <li><a href="home">Home</a></li>
                 <li class="currentPage"><a href="bio">Bio</a></li>
-                <li><a href="portfolio">Portfolio</a></li>
+                <li><a href="projects">Projects</a></li>
                 <li><a href="resume">Resume</a></li>
                 <li><a href="contact">Contact Me!</a></li>
             </ul>
