- Fix paths in navbar. - Bring home.js over from old portfolio. - Create pages.js.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,11 +15,11 @@
     <nav>
         <div id="navbar">
             <ul>
-                <li><a href="home">Home</a></li>
-                <li class="currentPage"><a href="bio">Bio</a></li>
-                <li><a href="projects">Projects</a></li>
-                <li><a href="resume">Resume</a></li>
-                <li><a href="contact">Contact Me!</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/bio">Bio</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/resume">Resume</a></li>
+                <li><a href="/contact">Contact Me!</a></li>
             </ul>
             <button class="hidden">
                 <span class="iconBar"></span>
@@ -33,3 +33,9 @@
 </body>
 
 </html>
+
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script src="{% static 'js/pages.js' %}"></script>
