- Fix image paths in pages. - Stling. - Add in old resume content.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,12 +11,12 @@
     <main id="contact">
         <p>To contact me, please send me an email at <a href="mailto:jackie.stonebraker@gmail.com">jackie.stonebraker@gmail.com</a></p>
         <div>
-        <a href="https://www.linkedin.com/in/jackiestonebraker">
-            <img src="static/img/linkedIn34px.jpg"/>
-        </a>
-        <a href="https://github.com/jackles-1">
-            <img src="static/img/gitHub32px.jpg"/>
-        </a>
-    </div>
+            <a href="https://www.linkedin.com/in/jackiestonebraker">
+                <img src="/static/img/linkedIn34px.jpg"/>
+            </a>
+            <a href="https://github.com/jackles-1">
+                <img src="/static/img/gitHub32px.jpg"/>
+            </a>
+        </div>
     </main>
 {% endblock %}
