--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 			</a>
 		</div>
 		<div class="circle">
-			<a href="portfolio" class="portfolioPic">
+			<a href="projects" class="projectsPic">
 			</a>
 		</div>
 		<div class="circle">
@@ -51,8 +51,6 @@
 		<a href="https://github.com/jackles-1">
 			<img src="static/img/gitHub32px.jpg"/>
 		</a>
-
-		<p>NOTE: At this time, this site is optimized for Chrome and Firefox. Mobile and other browser support is in the works!</p>
 	</main>
 </body>
 </html>
