--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,5 +5,14 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Projects</h1>
+    <header>
+        <h1>Projects</h1>
+    </header>
+    <main>
+        <div id="portfolioContainer">
+            <p>
+                Projects coming soon!
+            </p>
+        </div>
+    </main>
 {% endblock %}
