--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -113,16 +113,16 @@ nav.home{
 	background-size: contain;
 }
 
-.portfolioPic{
-	background-image: url(../img/portfolioPic.jpg);
+.projectsPic{
+	background-image: url(../img/projectsPic.jpg);
 	background-size: contain;
 }
 
-.portfolioPicHover{
+.projectsPicHover{
 	background-image: radial-gradient(circle,
 			rgba(0, 0, 0, 0.5) 60px,
 			rgb(209, 206, 213) 60px
-		), url(../img/portfolioPic.jpg);
+		), url(../img/projectsPic.jpg);
 	background-size: contain;
 }
 
@@ -262,21 +262,20 @@ img.projectPic{
 }
 
 /*RESUME PAGE*/
-#resumeHeader{
-	margin: 15px 0 20px 0;
+header.resume{
+	margin: 20px 0 20px 0;
 }
 
-#resume{
+header.resume h1{
+    display: inline;
+}
+
+main.resume{
 	width: 65%;
 	padding-left: 22%;
 	font-weight: 700;
 	font-family: Raleway;
 	line-height: 130%;
-	margin: 40px 0;
-}
-
-#resumeHeader h1{
-	display: inline;
 }
 
 img#pdfIcon{
@@ -285,11 +284,11 @@ img#pdfIcon{
 	width: 50px;
 }
 
-#resume h2{
+main.resume h2{
 	font-family: Raleway;
 }
 
-#resume h3{
+main.resume h3{
 	padding-left: 20px;
 	margin-bottom: 0;
 	font-size: 130%;
@@ -299,7 +298,7 @@ img#pdfIcon{
 	margin-top: 5px;
 }
 
-#resume span{
+main.resume span{
 	float: right;
 	font-weight: 700;
 }
