- Remove mailtos. - Change "portfolio" to "projects" in js.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,12 @@
         <h1>Contact Me</h1>
     </header>
     <main id="contact">
-        <p>To contact me, please send me an email at <a href="mailto:jackie.stonebraker@gmail.com">jackie.stonebraker@gmail.com</a></p>
+        <p>
+            Please feel free to contact me at:
+        </p>
+        <p>
+             jackie.stonebraker (at) gmail (dot) com
+        </p>
         <div>
             <a href="https://www.linkedin.com/in/jackiestonebraker">
                 <img src="/static/img/linkedIn34px.jpg"/>
