--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 	<header class="home">
 		<h1>Jackie Stonebraker</h1>
 		<hr>
-		<p>Web developer...</p>
+		<p>Web developer and lover of learning</p>
 		<span id="arrow">
 			<i class="fa fa-arrow-down" aria-hidden="true"></i>
 		</span>
@@ -41,16 +41,23 @@
 	</nav>
 
 	<main class="home">
-		<p>Hi there! I am a web developer living in Boulder, Colorado. I am currently...</p>
-
-		<p>*Description*</p>
-
-		<a href="https://www.linkedin.com/in/jackiestonebraker">
-  			<img src="static/img/linkedIn34px.jpg"/>
-		</a>
-		<a href="https://github.com/jackles-1">
-			<img src="static/img/gitHub32px.jpg"/>
-		</a>
+		<p>
+            Hello world! I am a web developer living in Boulder, Colorado, currently seeking employment. I am open to part-time, full-time, and freelance work.
+        </p>
+        <p>
+            Please feel free to contact me at:
+        </p>
+        <p>
+            jackie.stonebraker (at) gmail (dot) com
+        </p>
+        <div id="socialMediaLinks">
+            <a href="https://www.linkedin.com/in/jackiestonebraker">
+      			<img src="static/img/linkedIn34px.jpg"/>
+    		</a>
+    		<a href="https://github.com/jackles-1">
+    			<img src="static/img/gitHub32px.jpg"/>
+    		</a>            
+        </div>
 	</main>
 </body>
 </html>
