--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -154,7 +154,7 @@ nav.home{
 
 main.home{
 	margin: 110px auto 30px auto;
-	text-align: center;
+	text-align: left;
 }
 
 main.home p{
@@ -167,6 +167,12 @@ main.home p{
 
 main.home img{
 	padding: 10px 5px 25px 5px;
+}
+
+#socialMediaLinks{
+    width: 50%;
+    margin: 0 auto 20px auto;
+    text-align: left;
 }
 
 /*PAGES*/
