Highlight current page on navbar.

--- a/templates/home.html
+++ b/templates/home.html
@@ -43,12 +43,13 @@
 	<main class="home">
 		<p>
             Hello world! I am a web developer living in Boulder, Colorado, currently seeking employment. I am open to part-time, full-time, and freelance work.
-        </p>
-        <p>
             Please feel free to contact me at:
         </p>
         <p>
             jackie.stonebraker (at) gmail (dot) com
+        </p>
+        <p>
+            Note: This website is currently under construction. For more information about me, please take a look at my LinkedIn profile!
         </p>
         <div id="socialMediaLinks">
             <a href="https://www.linkedin.com/in/jackiestonebraker">
@@ -56,7 +57,7 @@
     		</a>
     		<a href="https://github.com/jackles-1">
     			<img src="static/img/gitHub32px.jpg"/>
-    		</a>            
+    		</a>
         </div>
 	</main>
 </body>
