--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,7 +11,7 @@
     <main>
         <div id="portfolioContainer">
             <p>
-                Projects coming soon!
+                Coming soon!
             </p>
         </div>
     </main>
