--- a/templates/resume.html
+++ b/templates/resume.html
@@ -7,14 +7,14 @@
 {% block body %}
     <header class="resume">
         <div>
-    		<h1>Jackie Stonebraker</h1>
+    		<!-- <h1>Jackie Stonebraker</h1>
     		<a target="blank" href="https://drive.google.com/file/d/0ByKFHJoJnHjPbnlSclFJZFZLbnc/view?usp=sharing">
     			<img src="/static/img/pdfIcon.png" id="pdfIcon">
-    		</a>
+    		</a> -->
     	</div>
     </header>
     <main class="resume">
-    	<div>
+    	<!--<div>
     		<table>
     			<tr>
     				<td class="resumeCategory">
@@ -115,6 +115,6 @@
     		</table>
     	</div>
     </main>
-    <div>
+    <div>-->
 
 {% endblock %}
