--- a/templates/resume.html
+++ b/templates/resume.html
@@ -7,57 +7,33 @@
 {% block body %}
     <header class="resume">
         <div>
-    		<!-- <h1>Jackie Stonebraker</h1>
-    		<a target="blank" href="https://drive.google.com/file/d/0ByKFHJoJnHjPbnlSclFJZFZLbnc/view?usp=sharing">
+    		<h1>Jackie Stonebraker</h1>
+    		<a target="blank" href="https://drive.google.com/file/d/1baFvCn01iC5Zmpd15xRUILn3yMOh5o6J/view?usp=sharing">
     			<img src="/static/img/pdfIcon.png" id="pdfIcon">
-    		</a> -->
+    		</a>
     	</div>
     </header>
     <main class="resume">
-    	<!--<div>
+    	<div>
     		<table>
-    			<tr>
-    				<td class="resumeCategory">
-    					<h2>Education</h2>
-    				</td>
-    				<td>
-    					<table>
-    						<h3>University of Colorado</h3>
-    							<tr>
-    								<ul id="eduUl">
-    									<li>Bachelor of Arts in Chemistry with Distinction<span>May 2012</span>
-    										<ul class="sublist">
-    											<li>Overall GPA: 3.873</li>
-    										</ul>
-    									</li>
-    									<li>Computer Science Courses<span>June 2014-December 2015</span>
-    										<ul class="sublist">
-    											<li>Completed Introductory Programming, Data Structures, Discrete Mathematics, and Computer Systems courses with a GPA of 3.813.</li>
-    										</ul>
-    									</li>
-    								</ul>
-    							</tr>
-    					</table>
-    				</td>
-    			</tr>
-    			<tr>
-    				<td class="resumeCategory">
-    					<h2>Academic Awards & Activities</h2>
-    				</td>
-    				<td>
-    					<ul>
-    						<li>ACS Division of Analytical Chemistry Undergraduate Award<span>May 2012</span></li>
-    						<li>Member of Phi Beta Kappa Honors Fraternity<span>December 2011-Present</span></li>
-    						<li>Co-President of CU Chemistry and Biochemistry Club<span>August 2010-May 2012</span></li>
-    					</ul>
-    				</td>
-    			</tr>
     			<tr>
     				<td class="resumeCategory">
     					<h2>Work Experience</h2>
     				</td>
     				<td>
     					<ul>
+                            <li>Boulder County Information Technology<span>March-December 2017</span>
+                                <ul class="sublist">
+                                    <li>Applications Developer Intern
+                                        <ul>
+                                            <li>Built an application affecting all employees of Boulder County.</li>
+                                            <li>Headed all steps for the entire life-cycle—worked with the main user for requirements gathering, managed users during testing, and deployed.</li>
+                                            <li>Built the full stack—database, back-end, web service, and front-end.</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+
+                            </li>
     						<li>Boulder County Parks and Open Space Department<span>January-June 2016</span>
     							<ul class="sublist">
     								<li>Administrative Technician
@@ -101,20 +77,55 @@
     					</ul>
     				</td>
     			</tr>
+                <tr>
+    				<td class="resumeCategory">
+    					<h2>Education</h2>
+    				</td>
+    				<td>
+    					<table>
+    						<h3>University of Colorado</h3>
+    							<tr>
+    								<ul id="eduUl">
+    									<li>Bachelor of Arts in Chemistry with Distinction<span>May 2012</span>
+    										<ul class="sublist">
+    											<li>Overall GPA: 3.873</li>
+    										</ul>
+    									</li>
+    									<li>Computer Science Courses<span>June 2014-December 2015</span>
+    										<ul class="sublist">
+    											<li>Completed Introductory Programming, Data Structures, Discrete Mathematics, and Computer Systems courses with a GPA of 3.813.</li>
+    										</ul>
+    									</li>
+    								</ul>
+    							</tr>
+    					</table>
+    				</td>
+    			</tr>
+    			<tr>
+    				<td class="resumeCategory">
+    					<h2>Academic Awards & Activities</h2>
+    				</td>
+    				<td>
+    					<ul>
+    						<li>ACS Division of Analytical Chemistry Undergraduate Award<span>May 2012</span></li>
+    						<li>Member of Phi Beta Kappa Honors Fraternity<span>December 2011-Present</span></li>
+    						<li>Co-President of CU Chemistry and Biochemistry Club<span>August 2010-May 2012</span></li>
+    					</ul>
+    				</td>
+    			</tr>
     			<tr>
     				<td class="resumeCategory">
     					<h2>Programming Skills</h2>
     				</td>
     				<td>
     					<ul>
-    						<li>Proficient in: Python, C++, JavaScript, CSS, and HTML.</li>
-    						<li>Familiar with: SQL, C#, and C.</li>
+    						<li>Python, Django, C#, ASP.NET MVC, JavaScript, CSS, HTML, jQuery, Bootstrap.</li>
     					</ul>
     				</td>
     			</tr>
     		</table>
     	</div>
     </main>
-    <div>-->
+    <div>
 
 {% endblock %}
