--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 			</a>
 		</div>
 		<div class="circle">
-			<a href="projects" class="projectsPic">
+			<a href="portfolio" class="portfolioPic">
 			</a>
 		</div>
 		<div class="circle">
@@ -49,7 +49,7 @@
             jackie.stonebraker (at) gmail (dot) com
         </p>
         <p>
-            Note: This website is currently under construction. For more information about me, please take a look at my LinkedIn profile!
+            Note: Some of the pages on this website are currently under construction. For more information about me, please take a look at my LinkedIn profile!
         </p>
         <div id="socialMediaLinks">
             <a href="https://www.linkedin.com/in/jackiestonebraker">
