--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/bio">Bio</a></li>
-                <li><a href="/projects">Projects</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/resume">Resume</a></li>
                 <li><a href="/contact">Contact Me!</a></li>
             </ul>
