--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <header>
-        <h1>Projects</h1>
+        <h1>Portfolio</h1>
     </header>
     <main>
         <div id="portfolioContainer">
