Add projects to portfolio page.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,10 +16,10 @@
              jackie.stonebraker (at) gmail (dot) com
         </p>
         <div>
-            <a href="https://www.linkedin.com/in/jackiestonebraker">
+            <a target="blank" href="https://www.linkedin.com/in/jackiestonebraker">
                 <img src="/static/img/linkedIn34px.jpg"/>
             </a>
-            <a href="https://github.com/jackles-1">
+            <a target="blank" href="https://github.com/jackles-1">
                 <img src="/static/img/gitHub32px.jpg"/>
             </a>
         </div>
