--- a/templates/home.html
+++ b/templates/home.html
@@ -52,10 +52,10 @@
             Note: Some of the pages on this website are currently under construction. For more information about me, please take a look at my LinkedIn profile!
         </p>
         <div id="socialMediaLinks">
-            <a href="https://www.linkedin.com/in/jackiestonebraker">
+            <a target="blank" href="https://www.linkedin.com/in/jackiestonebraker">
       			<img src="static/img/linkedIn34px.jpg"/>
     		</a>
-    		<a href="https://github.com/jackles-1">
+    		<a target="blank" href="https://github.com/jackles-1">
     			<img src="static/img/gitHub32px.jpg"/>
     		</a>
         </div>
