--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -10,9 +10,46 @@
     </header>
     <main>
         <div id="portfolioContainer">
-            <p>
-                Coming soon!
-            </p>
+    		<table>
+    			<tr>
+    				<td>
+    					<div class="project">
+    						<a href="/">
+    							<img src="/static/img/portfolioTilePic.png" class="projectPic">
+    						</a>
+    						<h3>
+    							<a href="/">This Website!</a>
+    						</h3>
+    						<ul>
+    							<li class="languages">Django, JavaScript, HTML, CSS</li>
+    							<li>This has been a great learning experience! </li>
+                                <li>The most gratifying part has been using Django to structure and deploy this site.</li>
+    							<li>I’ve gotten to practice using tables, lots of CSS, and some fun JavaScript.</li>
+    							<a target="blank" href="https://github.com/jackles-1/django-portfolio">
+    								<img src="/static/img/gitHub32px.jpg" class="portfolioIcons">
+    							</a>
+    						</ul>
+    					</div>
+    				</td>
+                    <td>
+                        <div class="project">
+                            <img src="/static/img/square-top-lakes-square.jpg" class="projectPic">
+                            <h3>
+                                More Coming Soon!
+                            </h3>
+                            <ul>
+                                <li>
+                                    In the meantime, please read about my projects on my LinkedIn profile.
+                                    <a target="blank" href="https://www.linkedin.com/in/jackiestonebraker">
+                                    	<img src="/static/img/linkedIn34px.jpg"/>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+    				</td>
+    			</tr>
+
+    		</table>
         </div>
     </main>
 {% endblock %}
