Minor text change on portfolio page.

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -39,7 +39,7 @@
                             </h3>
                             <ul>
                                 <li>
-                                    In the meantime, please read about my projects on my LinkedIn profile.
+                                    In the meantime, please read about my work projects on my LinkedIn profile.
                                     <a target="blank" href="https://www.linkedin.com/in/jackiestonebraker">
                                     	<img src="/static/img/linkedIn34px.jpg"/>
                                     </a>
