Add Google Analytics.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111631978-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-111631978-1');
+    </script>
+    
     <title>Jackie Stonebraker</title>
     <link rel="stylesheet" href="{% static 'css/portfolio.css' %}" />
     {% block header %}
