--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 
     <title>Jackie Stonebraker</title>
     <link rel="stylesheet" href="{% static 'css/portfolio.css' %}" />
-	<link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway:400,700|Satisfy" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway:400,700|Roboto:400,700|Satisfy" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -24,7 +24,7 @@
 	<header class="home">
 		<h1>Jackie Stonebraker</h1>
 		<hr>
-		<p>Web developer and lover of learning</p>
+		<p>Tagline</p>
 		<span id="arrow">
 			<i class="fa fa-arrow-down" aria-hidden="true"></i>
 		</span>
@@ -52,7 +52,7 @@
 
 	<main class="home">
 		<p>
-            Hello world! I am a web developer living in Boulder, Colorado, currently seeking employment. I am open to part-time, full-time, and freelance work.
+            Summary...
             Please feel free to contact me at:
         </p>
         <p>
