--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 
       gtag('config', 'UA-111631978-1');
     </script>
-    
+
     <title>Jackie Stonebraker</title>
     <link rel="stylesheet" href="{% static 'css/portfolio.css' %}" />
     {% block header %}
@@ -26,7 +26,7 @@
         <div id="navbar">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/bio">Bio</a></li>
+                <li><a href="/bio">About Me</a></li>
                 <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/resume">Resume</a></li>
                 <li><a href="/contact">Contact Me!</a></li>
