--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block header %}
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
